man kan välja antal produkter samt tömma varukorgen

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         <title>Projektarbete</title>
     </head>
     <body>
+        <header>
+            <div>
+                <img src="" alt="" />
+                <h1>Kamerarullar</h1>
+            </div>
+        </header>
         <main>
-            <h1>Kamerarullar! :)</h1>
             <section id="product-container">
                 <aside id="cart-container">
                     <h2>Varukorg</h2>
@@ -22,6 +27,7 @@
                     <span id="total">Total: </span>
                     <br />
                     <button id="order">Beställ</button>
+                    <button id="remove-all">Töm varukorgen</button>
                 </aside>
             </section>
 
