--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+        />
         <link
             href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
             rel="stylesheet"
@@ -27,11 +32,11 @@
                     <ul id="cart-list"></ul>
                     <strong id="total">SUMMA:</strong>
                     <br />
-                    <button id="order">Beställ</button>
+                    <a href="" id="order" class="btn-warning">Beställ</a>
                     <button id="remove-all">Töm varukorgen</button>
                 </aside>
             </section>
-            
+
             <a href="products.json" target="_blank">JSON-fil</a>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
             <script src="main.js"></script>
