Fixat så local storage fungerar och lagt till en sida för beställningsbekräftelse

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <ul id="cart-list"></ul>
                     <strong id="total">SUMMA:</strong>
                     <br />
-                    <a href="" id="order" class="btn-warning">Beställ</a>
+                    <a href="order.html" id="order" class="btn-warning"
+                        >Beställ</a
+                    >
                     <button id="remove-all">Töm varukorgen</button>
                 </aside>
             </section>
