Alla funktionaliteter är klara

--- a/order.html
+++ b/order.html
@@ -18,11 +18,18 @@
         />
     </head>
     <body>
+        <header>
+            <div>
+                <img src="" alt="" />
+                <h1>Kamerarullar</h1>
+            </div>
+        </header>
+        <main>
         <a href="index.html">Hem</a>
-        <h1>Tack för din beställning!</h1>
+        <h2>Tack för din beställning!</h2>
 
         <ul id="ordered-products"></ul>
-
+    </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="orderpage.js"></script>
     </body>
