--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <ul id="cart-list"></ul>
                     <strong id="total">SUMMA:</strong>
                     <br />
-                    <a href="order.html" id="order" class="btn-warning"
+                    <button class="btn-warning"><a href="order.html" id="order" class="btn-warning"
                         >Beställ</a
-                    >
+                    ></button>
                     <button id="remove-all">Töm varukorgen</button>
                 </aside>
             </section>
