--- a/order.html
+++ b/order.html
@@ -6,12 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Document</title>
         <link rel="stylesheet" href="style2.css" />
-        <link
+        <!-- <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous"
-        />
+        /> -->
         <link
             href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
             rel="stylesheet"
@@ -24,11 +24,12 @@
                 <h1>Kamerarullar</h1>
             </div>
         </header>
-        <main>
-        <a href="index.html">Hem</a>
+        <main class="container-ordered">
+       
         <h2>Tack för din beställning!</h2>
 
-        <ul id="ordered-products"></ul>
+        <table id="ordered-products"></table>
+        <a href="index.html">Tillbaka till startsidan</a>
     </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="orderpage.js"></script>
