--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                     <ul id="cart-list"></ul>
                     <strong id="total">SUMMA:</strong>
                     <br />
-                    <button class="btn-warning"><a href="order.html" id="order" class="btn-warning"
-                        >Beställ</a
-                    ></button>
+                    <button class="btn-warning">
+                        <a href="order.html" id="order" class="btn-warning"
+                            >Beställ</a
+                        >
+                    </button>
                     <button id="remove-all">Töm varukorgen</button>
                 </aside>
             </section>
