--- a/order.html
+++ b/order.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
-        <link rel="stylesheet" href="style2.css" />
-        <!-- <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            crossorigin="anonymous"
-        /> -->
-        <link
-            href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
-            rel="stylesheet"
-        />
-    </head>
-    <body>
-        <header>
-            <div>
-                <img src="" alt="" />
-                <h1>Kamerarullar</h1>
-            </div>
-        </header>
-        <main class="container-ordered">
-       
-        <h2>Tack för din beställning!</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link
+    href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
+    rel="stylesheet"
+  />
+    <title>Orderbekräftelse</title>
+  </head>
+  <body>
+    <main>
+      <header>
+        <div class="logo">
+          <img src="./images/extra2.png" class="logo-pic" alt="" />
+        </div>
 
-        <table id="ordered-products"></table>
-        <a href="index.html">Tillbaka till startsidan</a>
+        <h1>ANALOG FILM</h1>
+      </header>
+      <section class="order-page">
+          <a href="index.html" class="back">Tillbaka</a>
+          <h2 class="thank-u">Tack för din Beställning!</h2>
+        <h3>Orderbekräftelse:</h3>
+        <ul id="receipt"></ul>
+        <h3 id="receipt-total" class="receipt-total">SUMMA:</h3><br>
+      </section>
     </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="orderpage.js"></script>
-    </body>
+
+    <footer class="footer">
+      
+      <p class="footer-text">Projekt JavaScript2</p>
+      <p class="footer-text">AnaMaria, Hannah & Madeleine FEND19</p>
+
+    </footer>
+
+    <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js></script>
+    <script src="order-page.js"></script>
+  </body>
 </html>
